--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">JetpackComposeTutorial</string>
+
+    <!--  UI Strings  -->
+    <string name="search_text">Search</string>
 </resources>
